--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ethers": "^5.4.6",
     "hardhat-typechain": "^0.3.5",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
     "ts-generator": "^0.1.1",
     "typechain": "^4.0.3",
@@ -48,6 +50,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
-    "hardhat": "^2.6.1"
+    "hardhat": "^2.6.1",
+    "react-router-dom": "^5.2.1"
   }
 }
