--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "ts-generator": "^0.1.1",
     "typechain": "^4.0.3",
     "web-vitals": "^1.0.1"
